tests/machine/x/ocaml/string_prefix_slice.error
File "/workspace/mochi/tests/machine/x/ocaml/string_prefix_slice.ml", line 30, characters 26-31:
30 |   print_endline (__show ((slice s1 0 List.length prefix = prefix)));
                               ^^^^^
Error: This function has type 'a list -> int -> int -> 'a list
       It is applied to too many arguments; maybe you forgot a `;'.
